[gd_scene load_steps=2 format=3 uid="uid://neqghf6gfg36"]

[ext_resource type="Script" path="res://village.gd" id="1_ngrii"]

[node name="Village" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ngrii")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.0823529, 0.101961, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Village"

[node name="Merchant" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Merchant"

[node name="Tavern" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Tavern"

[node name="Blacksmith" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Blacksmith"

[node name="Start" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 0

[node name="Menu" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_type_variation = &"SquareButton"
text = "Menu"

[node name="Quit" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_type_variation = &"SquareButton"
text = "Quit"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Merchant" to="." method="_on_merchant_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Tavern" to="." method="_on_tavern_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Blacksmith" to="." method="_on_blacksmith_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
